add: userRate CRUDs
