# internal/delivery/routers/routers.go
@@ -2,6 +2,7 @@ package routers
 
 import (
 	"crypto-temka/internal/delivery/middleware"
+	"crypto-temka/internal/delivery/routers/admin"
 	"crypto-temka/pkg/log"
 	"github.com/gin-gonic/gin"
 	"github.com/jmoiron/sqlx"
@@ -9,6 +10,5 @@ import (
 )
 
 func InitRouting(r *gin.Engine, db *sqlx.DB, logger *log.Logs, mdw middleware.Middleware, metricsSetFile *os.File) {
-	_ = RegisterStaticRouter(r, db, logger, metricsSetFile)
-	_ = RegisterRateRouter(r, db, logger)
+	admin.InitAdminRouters(r, db, logger, mdw, metricsSetFile)
 }
